--- a/index.html
+++ b/index.html
@@ -435,10 +435,10 @@
                     <div class="footer-section">
                         <h4 class="footer-title">Contact Info</h4>
                         <ul class="footer-links">
-                            <li>📍 Your CSC Address Here</li>
-                            <li>📞 +91 XXXXXXXXXX</li>
-                            <li>✉️ info@digisaarthi.com</li>
-                            <li>🕒 Mon-Sat: 9AM-6PM</li>
+                            <li>📍 Digisaarthi, Dulkibandh, Kalahandi</li>
+                            <li>📞 +91 7608913436</li>
+                            <li>✉️ cscdulkibandh@gmail.com</li>
+                            <li>🕒 Mon-Sat: 8AM-8AM</li>
                         </ul>
                     </div>
                 </div>
