--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                            class="btn btn-secondary btn-lg" target="_blank">
                            💬 Chat on WhatsApp
                         </a>
-                        <button class="btn btn-outline-primary btn-lg">📞 Call Us Now</button>
+                          <a href="tel:+917608913436" class="btn btn-outline-primary btn-lg">📞 Call Us Now</a>
                     </div>
                 </div>
             </div>
@@ -437,7 +437,7 @@
                             <li>📍 Digisaarthi, Dulkibandh, Kalahandi</li>
                             <li>📞 +91 7608913436</li>
                             <li>✉️ cscdulkibandh@gmail.com</li>
-                            <li>🕒 Mon-Sat: 8AM-8AM</li>
+                            <li>🕒 Mon-Sat: 8AM-8PM</li>
                         </ul>
                     </div>
                 </div>
