--- a/index.html
+++ b/index.html
@@ -328,6 +328,51 @@
         </div>
     </div>
 
+    <!-- Convert Tools -->
+<div class="col-12 mb-4">
+   <h3 class="text-primary mb-3">🖨️ Convert Tools</h3>
+   <div class="row">
+       <div class="col-12 col-md-6 col-lg-4 mb-3">
+           <div class="service-card hover-lift">
+               <div class="service-card-icon">🔄</div>
+               <h4 class="card-title">Convert File</h4>
+               <p class="card-text">Convert files between different formats instantly</p>
+               <div class="d-flex justify-center" style="gap: 10px;">
+                   <a href="convert.html" class="btn btn-primary btn-sm">Convert Now</a>
+                   <a href="https://wa.me/917608913436?text=I need Convert File service." 
+                      class="btn btn-secondary btn-sm" target="_blank">WhatsApp</a>
+               </div>
+           </div>
+       </div>
+
+       <div class="col-12 col-md-6 col-lg-4 mb-3">
+           <div class="service-card hover-lift">
+               <div class="service-card-icon">🗜️</div>
+               <h4 class="card-title">Compress File</h4>
+               <p class="card-text">Reduce file size without losing quality</p>
+               <div class="d-flex justify-center" style="gap: 10px;">
+                   <a href="compress.html" class="btn btn-primary btn-sm">Compress Now</a>
+                   <a href="https://wa.me/917608913436?text=I need Compress File service." 
+                      class="btn btn-secondary btn-sm" target="_blank">WhatsApp</a>
+               </div>
+           </div>
+       </div>
+
+       <div class="col-12 col-md-6 col-lg-4 mb-3">
+           <div class="service-card hover-lift">
+               <div class="service-card-icon">📐</div>
+               <h4 class="card-title">Resize File</h4>
+               <p class="card-text">Resize images and documents to any dimension</p>
+               <div class="d-flex justify-center" style="gap: 10px;">
+                   <a href="resize.html" class="btn btn-primary btn-sm">Resize Now</a>
+                   <a href="https://wa.me/917608913436?text=I need Resize File service." 
+                      class="btn btn-secondary btn-sm" target="_blank">WhatsApp</a>
+               </div>
+           </div>
+       </div>
+   </div>
+
+
     <!-- Specialized Services -->
     <div class="col-12 mb-4">
         <h3 class="text-primary mb-3">⚙️ Specialized Services</h3>
