--- a/convert.html
+++ b/convert.html
@@ -287,7 +287,7 @@
     <div class="container">
         <div class="header">
             <h1>📸 JPG to PDF Converter</h1>
-            <p>Convert your images to PDF instantly - No server required!</p>
+            <p>Convert your images to PDF instantly</p>
         </div>
 
         <div class="main-content">
