--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <h4 class="card-title">Ration Card</h4>
                     <p class="card-text">New ration card application and family member additions</p>
                     <div class="d-flex justify-center" style="gap: 10px;">
-                        <button class="btn btn-primary btn-sm" onclick="window.open('https://nfsa.gov.in/', '_blank')">Apply Now</button>
+                        <button class="btn btn-primary btn-sm" onclick="window.open('https://pdsodisha.gov.in/NFSA/CitizenshipEnrollmentNew/CitizenshipEnrollmentNew', '_blank')">Apply Now</button>
                         <a href="https://wa.me/917608913436?text=I'm interested in your Ration Card service." 
                            class="btn btn-secondary btn-sm" target="_blank">WhatsApp</a>
                     </div>
